<resources>
    <string name="app_name">EEE521-FinalYearProject-B00708431-FitnessTracker</string>

    <string name="start_up_welcome">Welcome!</string>
    <string name="start_up_welcome_Desc">Thank you for using this app, you will use it to keep track of your exercise routine and help motivate you to push your potential!</string>
    <string name="start_up_instruction">Choose a profile from the drop down list</string>
    <string name="start_up_create_profile">if you don\'t have a profile you can click here</string>

    <string name="create_profile_warningTxt">NOTE: This app will require your personal measurements to determine calories burned</string>
    <string name="create_profile_email">E-mail</string>
    <string name="create_profile_password">Password</string>
    <string name="create_profile_name">Name</string>
    <string name="create_profile_height">Height(cm)</string>
    <string name="create_profile_weight">Weight(kg)</string>
    <string name="create_profile_dob">Date of Birth(dd/mm/yyyy)</string>
    <string name="create_profile_return_txt">Return to Log in</string>

    <string name="menu_Title">Pick a feature</string>
    <string name="menu_workout_Log">Workout Log</string>
    <string name="menu_workouts">Workout Routines</string>
    <string name="menu_UserStats">Personal Statistics</string>
    <string name="menu_exit">Exit</string>

    <string name="PStats_Title">Personal Statistics</string>
    <string name="PStats_Users_NameLbl">Name:</string>
    <string name="PStats_Users_NameVal">null</string>
    <string name="PStats_Users_DOBLbl">Birth:</string>
    <string name="PStats_Users_DOBVal">null</string>
    <string name="PStats_Users_GenderLbl">Gender:</string>
    <string name="PStats_Users_GenderVal">null</string>
    <string name="PStats_Users_HeightLbl">Height:</string>
    <string name="PStats_Users_HeightVal">000</string>
    <string name="PStats_Users_WeightLbl">Weight:</string>
    <string name="PStats_Users_WeightVal">0.00</string>
    <string name="cm">cm</string>
    <string name="kg">Kg</string>
    <string name="PStats_Users_WorkoutsCompLbl">Workouts Completed:</string>
    <string name="PStats_Users_WorkoutsCompVal">0</string>
    <string name="PStats_Users_ExercisesCompLbl">Exercises Completed:</string>
    <string name="PStats_Users_ExercisesCompVal">0</string>
    <string name="PStats_Users_BMILbl">BMI: </string>
    <string name="PStats_Users_BMIVal">...</string>
    <string name="PStats_Users_HealthStatusLbl">Health Status: </string>
    <string name="PStats_Users_HealthStatusVal">Healthy</string>
    <string name="PStats_EditDetails_BtnTxt">Edit Details</string>
    <string name="PStats_DeleteProfile_BtnTxt">Delete Profile</string>
    <string name="PStats_BMI_Info">About BMI ?</string>

    <string name="BMIInfo_Title">BMI</string>
    <string name="BMIInfo_WhatIs">What is BMI?</string>
    <string name="BMIInfo_WhatIsInfo">Body Mass Index (BMI) is a measure of body fat based on height and weight.</string>
    <string name="BMIInfo_HowIsCal">How is it Calculated?</string>
    <string name="BMIInfo_HowIsCalInfo"> Body Mass Index is a simple calculation using a person’s height and weight. The formula is BMI = kg/m2 where kg is a person’s weight in kilograms and m2 is their height in metres squared.
                                            A BMI of 25.0 or more is overweight, while the healthy range is 18.5 to 24.9. BMI applies to most adults 18-65 years.</string>
    <string name="BMIInfo_Important">Important to consider the following...</string>
    <string name="BMIInfo_ImportantInfo">BMI is not used for muscle builders, long distance athletes, pregnant women, the elderly or young children.
                                            This is because BMI does not take into account whether the weight is carried as muscle or fat, just the number. Those with a higher muscle mass, such as athletes, may have a high BMI but not be at greater health risk.
                                            Those with a lower muscle mass, such as children who have not completed their growth or the elderly who may be losing some muscle mass may have a lower BMI.
                                            During pregnancy and lactation, a woman\'s body composition changes, so using BMI is not appropriate.</string>

    <string name="EditUserDetails_Title">Edit Details</string>
    <string name="EditUserDetails_SaveBtn">Save</string>
    <string name="EditUserDetails_CancelBtn">Cancel</string>

    <string name="WorkoutLog_add_Exercise_btn">Add Exercise</string>
    <string name="WorkoutLog_View_Past_Workout">View Past Workouts</string>
    <string name="WorkoutLog_Log_TextView">Workout Log</string>
    <string name="WorkoutLog_Save_Workout_Btn">Save Workout</string>

    <string name="AddExercise_Title">Add Exercise</string>
    <string name="AddExercise_type_txt">Type</string>
    <string name="AddExercise_exerciseName_txt">Exercise</string>
    <string name="AddExercise_SetsTxt"># of Sets</string>
    <string name="AddExercise_RepsTxt"># of Reps</string>
    <string name="AddExercise_Add_Btn">Add</string>
    <string name="AddExercise_Cancel_Btn">Cancel</string>
    <string name="AddExercise_ViewInfo_Txt">View exercise info</string>

    <string name="PastWorkouts_Title">Past Workouts</string>
    <string name="PastWorkout_Return_Btn">Return</string>

    <string name="PastWorkout_Title">Workout: </string>
    <string name="PastWorkout_totalRepsLbl">Total Reps:</string>
    <string name="PastWorkout_totalRepsValue">0</string>
    <string name="PastWorkout_totalSetsLbl">Total Sets: </string>
    <string name="PastWorkout_totalSetsVal">0</string>
    <string name="PastWorkout_dateCompletedLbl">Date Completed</string>
    <string name="PastWorkout_dateCompletedVal">1/1/2010</string>
    <string name="PastWorkout_ReturnButton">Return</string>

    <string name="WorkoutPlans_Title">Workout Plans</string>
    <string name="WorkoutPlans_Chest_Title">Chest Workout</string>
    <string name="WorkoutPlans_Back_Title">Back Workout</string>
    <string name="WorkoutPlans_Abs_Title">Abs Workout</string>
    <string name="WorkoutPlans_Arms_Title">Arms Workout</string>
    <string name="WorkoutPlans_Legs_Title">Legs Workout</string>
    <string name="WorkoutPlans_Return">Return</string>

    <string name="SelectedPlan_Title">Selected Plan</string>

    <string name="ExerciseHelp_Title">Exercise Info</string>
    <string name="ExerciseHelp_ExerciseNameLbl">Exercise:</string>
    <string name="ExerciseHelp_ExerciseNameVal">...</string>
    <string name="ExerciseHelp_HelpLbl">Info - tips:</string>
    <string name="ExerciseHelp_HelpVal">...</string>

    <!-- Resource Arrays-->

    <string-array name="ExerciseTypes">
        <item>Abs</item>
        <item>Arms</item>
        <item>Back</item>
        <item>Chest</item>
        <item>Legs</item>
    </string-array>

    <string-array name="AbExercises">
        <item>Bicycle Crunches</item>
        <item>Crossover Crunch</item>
        <item>Heel Touch</item>
        <item>Leg Raises</item>
        <item>Mountain Climbers</item>
        <item>Plank Walk</item>
        <item>Russian Twists</item>
        <item>Side Plank Raises</item>
        <item>Sit-Ups</item>
        <item>V-Ups</item>
    </string-array>

    <string-array name="ArmExercises">
        <item>Barbell Curl</item>
        <item>Cable Curl</item>
        <item>Cable Front Raises</item>
        <item>Diamond Push Ups</item>
        <item>Dumbbell Front Raises</item>
        <item>Dumbbell Shoulder Press</item>
        <item>Machine Shoulder Press</item>
        <item>Over Head Tricep Extensions</item>
        <item>Over Head Tricep Press</item>
        <item>Seated Bent-over Rear Deltoid Rows</item>
        <item>Seated Dumbbell Curl</item>
        <item>Side Lateral Raises</item>
        <item>Standing Dumbbell Curl</item>
        <item>Tricep Dip</item>
        <item>Tricep Pulldown</item>
    </string-array>

    <string-array name="BackExercises">
        <item>Barbell Deadlift</item>
        <item>Bent-over Barbell Deadlift</item>
        <item>Cable Row</item>
        <item>Chin-Up</item>
        <item>Face Pulls</item>
        <item>Inverted Rows</item>
        <item>Lateral Pulldown</item>
        <item>Pull Up</item>
        <item>Rear Deltoid Flies</item>
        <item>Rear Deltoid Row</item>
        <item>Single Arm Dumbbell Row</item>
        <item>Sumo Deadlift</item>
        <item>Upright Row</item>
        <item>Wide Grip Seated Cable Row</item>
    </string-array>

    <string-array name="ChestExercises">
        <item>Cable Chest Fly</item>
        <item>Decline Bench Press</item>
        <item>Decline Dumbbell Bench Press</item>
        <item>Decline Push-Up</item>
        <item>Dumbbell Fly</item>
        <item>Flat Bench Press</item>
        <item>Flat Dumbbell Bench Press</item>
        <item>Incline Bench Press</item>
        <item>Incline Dumbbell Bench Press</item>
        <item>Push-Up</item>
        <item>Push-Up and Rotation</item>
        <item>Seated Machine Chest Fly</item>
        <item>Seated Machine Chest Press</item>
        <item>Spider-Man Push-Ups</item>
        <item>Staggered Push-Ups</item>
    </string-array>

    <string-array name="LegExercises">
        <item>Glute Bridges</item>
        <item>Laying Leg Curl</item>
        <item>Leg Extension</item>
        <item>Leg Press</item>
        <item>Lunges</item>
        <item>Seated Leg Curl</item>
        <item>Seated Squat</item>
        <item>Seated Thigh Abductores</item>
        <item>Seated Thigh Aductores</item>
        <item>Standing Calf Raise</item>
        <item>Squat</item>
    </string-array>
</resources>
