<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserStats">


    <TextView
        android:id="@+id/PStats_TitleTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/titleColors"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/PStats_ImgView"
        android:layout_width="200dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="false"
        android:background="@drawable/round_outline"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PStats_TitleTxtView"
        app:srcCompat="@drawable/user_stats_img" />


    <TextView
        android:id="@+id/PStats_UserName_Lbl_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_NameLbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/titleColors"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PStats_ImgView" />

    <TextView
        android:id="@+id/PStats_UserName_Val_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_NameVal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/PStats_UserName_Lbl_TxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/PStats_UserName_Lbl_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_ImgView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/PStats_DOBLbl_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_DOBLbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/titleColors"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/PStats_UserName_Lbl_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_UserName_Lbl_TxtView" />

    <TextView
        android:id="@+id/PStats_DOBVal_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_DOBVal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/PStats_DOBLbl_TxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/PStats_UserName_Val_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_UserName_Val_TxtView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/PStats_GenderLbl_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_GenderLbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/titleColors"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/PStats_DOBLbl_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_DOBLbl_TxtView" />

    <TextView
        android:id="@+id/PStats_GenderVal_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_GenderVal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/PStats_GenderLbl_TxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/PStats_DOBVal_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_DOBVal_TxtView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/PStats_HeightLbl_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_HeightLbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/titleColors"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/PStats_GenderLbl_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_GenderLbl_TxtView" />

    <TextView
        android:id="@+id/PStats_HeightVal_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_HeightVal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/PStats_HeightLbl_TxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/PStats_GenderVal_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_GenderVal_TxtView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/PStats_cm_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/cm"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/PStats_HeightVal_TxtView"
        app:layout_constraintStart_toEndOf="@+id/PStats_HeightVal_TxtView" />

    <TextView
        android:id="@+id/PStats_WeightLbl_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_WeightLbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/titleColors"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/PStats_HeightLbl_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_HeightLbl_TxtView" />

    <TextView
        android:id="@+id/PStats_WeightVal_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_WeightVal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/PStats_WeightLbl_TxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/PStats_HeightVal_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_HeightVal_TxtView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/PStats_Kgs_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/kg"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/PStats_WeightVal_TxtView"
        app:layout_constraintStart_toEndOf="@+id/PStats_WeightVal_TxtView"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/PStats_WorkoutCompLbl_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_ExercisesCompLbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/titleColors"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/PStats_WeightLbl_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_WeightLbl_TxtView" />

    <TextView
        android:id="@+id/PStats_ExercisesCompVal_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_ExercisesCompVal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/PStats_WorkoutCompLbl_TxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/PStats_WeightVal_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_WeightVal_TxtView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/PStats_WorkoutsCompLbl_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_WorkoutsCompLbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/titleColors"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/PStats_WorkoutCompLbl_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_WorkoutCompLbl_TxtView" />

    <TextView
        android:id="@+id/PStats_WorkoutsCompVal_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_WorkoutsCompVal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/PStats_WorkoutsCompLbl_TxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/PStats_ExercisesCompVal_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_ExercisesCompVal_TxtView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/PStats_UsersBMILbl_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_BMILbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/titleColors"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/PStats_WorkoutsCompLbl_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_WorkoutsCompLbl_TxtView" />

    <TextView
        android:id="@+id/PStats_UsersBMIVal_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_BMIVal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/PStats_UsersBMILbl_TxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/PStats_WorkoutsCompVal_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_WorkoutsCompVal_TxtView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/PStats_HealthStatusLbl_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_HealthStatusLbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/titleColors"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/PStats_UsersBMILbl_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_UsersBMILbl_TxtView" />

    <TextView
        android:id="@+id/PStats_HealthStatusVal_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/PStats_Users_HealthStatusVal"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/PStats_HealthStatusLbl_TxtView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/PStats_UsersBMIVal_TxtView"
        app:layout_constraintTop_toBottomOf="@+id/PStats_UsersBMIVal_TxtView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/PStats_BMIInfo_TxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:fontFamily="sans-serif-condensed-light"
        android:onClick="GoToBMIInfo"
        android:text="@string/PStats_BMI_Info"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorPrimary"
        android:textSize="10sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PStats_HealthStatusLbl_TxtView" />

    <Button
        android:id="@+id/PStats_ReturnBtn"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounder_edge"
        android:backgroundTint="@color/themeColourStart"
        android:fontFamily="sans-serif-condensed-light"
        android:onClick="Return"
        android:text="@string/PastWorkout_Return_Btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/PStats_EditDetailsBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PStats_BMIInfo_TxtView" />

    <Button
        android:id="@+id/PStats_EditDetailsBtn"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounder_edge"
        android:backgroundTint="@color/themeColourStart"
        android:fontFamily="sans-serif-condensed-light"
        android:onClick="GoToEditDetails"
        android:text="@string/PStats_EditDetails_BtnTxt"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PStats_BMIInfo_TxtView"
        app:layout_constraintVertical_bias="0.51" />

</android.support.constraint.ConstraintLayout>